--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccheckpoints",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Checkpoint system for Claude Code CLI - Track and visualize your coding sessions with automatic checkpoint creation",
   "main": "dist/cli.js",
   "type": "module",
@@ -73,5 +73,6 @@
     "rimraf": "^5.0.5",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
